eycartdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ey-deployment
  namespace: suwetha-ns
  labels:
    app: fit-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector: 
    matchLabels:
      app: ey
  template:
    metadata:
      labels:
        app: ey
    spec:
      containers:
        - name: ey-conatiner
          image: muralisocial123/ey-cart:v1.1.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits: 
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1 
kind: Service
metadata:
  name: ey-deployment-svc
  namespace: suwetha-ns
spec: 
  selector:
    app: ey
  ports:
    - port: 3001 # It is service post number we are using to expose the applicatioon to the internet
      targetPort: 3000
      protocol: TCP 
  type: ClusterIP
