fitdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fit-deployment
  namespace: suwetha-ns
  labels:
    app: fit-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector: 
    matchLabels:
      app: fit
  template:
    metadata:
      labels:
        app: fit
    spec:
      containers:
        - name: fit-conatiner
          image: muralisocial123/fitness-app:v1.0.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits: 
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1 
kind: Service
metadata:
  name: fit-deployment-svc
  namespace: suwetha-ns
spec: 
  selector:
    app: fit
  ports:
    - port: 3001 # It is service post number we are using to expose the applicatioon to the internet
      targetPort: 5000
      protocol: TCP 
  type: ClusterIP
