flipkartdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flipkart-deployment
  namespace: suwetha-ns
  labels:
    app: flip-app
spec:
  replicas: 6
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector: 
    matchLabels:
      app: flip
  template:
    metadata:
      labels:
        app: flip
    spec:
      containers:
        - name: flip-conatiner
          image: muralisocial123/flipkart-clone-kuberox:v1.1.0
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits: 
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1 
kind: Service
metadata:
  name: flipkart-deployment-svc
  namespace: suwetha-ns
spec: 
  selector:
    app: flip
  ports:
    - port: 3001 # It is service post number we are using to expose the applicatioon to the internet
      targetPort: 80
      protocol: TCP 
  type: ClusterIP
