flowerdeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flower-deployment
  namespace: suwetha-ns
  labels:
    app: flower-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  selector: 
    matchLabels:
      app: flower
  template:
    metadata:
      labels:
        app: flower
    spec:
      containers:
        - name: flower-conatiner
          image: muralisocial123/kyndrl-flower-app:v1.1.0
          ports:
            - containerPort: 3015
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits: 
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1 
kind: Service
metadata:
  name: flower-deployment-svc
  namespace: suwetha-ns
spec: 
  selector:
    app: flower
  ports:
    - port: 3001 # It is service post number we are using to expose the applicatioon to the internet
      targetPort: 5000
      protocol: TCP 
  type: ClusterIP
