trandeploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tran-deployment
  namespace: suwetha-ns
  labels:
    app: tran-app
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 2
      maxSurge: 2
  selector: 
    matchLabels:
      app: tran
  template:
    metadata:
      labels:
        app: tran
    spec:
      containers:
        - name: tran-conatiner
          image: muralisocial123/transaction-app:v1.0.0
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits: 
              memory: "256Mi"
              cpu: "200m"
---
apiVersion: v1 
kind: Service
metadata:
  name: tran-deployment-svc
  namespace: suwetha-ns
spec: 
  selector:
    app: tran
  ports:
    - port: 3001 # It is service post number we are using to expose the applicatioon to the internet
      targetPort: 3000
      protocol: TCP 
  type: ClusterIP
