transhttp.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trans-route 
  namespace: suwetha-ns
spec:
  parentRefs:
    - name: suwetha-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /trans
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: tran-deployment-svc
          port: 3001
